<resources>
    <string name="app_name">Me Myself And I</string>
    <string name="spalshtext">Me, Myself And I</string>
    <string name="splashimgdesc">Splash Image</string>
    <string name="hastag1">#StayHome</string>
    <string name="hastag2">#StaySafe</string>
    <string name="next">Next</string>
    <string name="walkim">Walkthrough Image</string>
    <string name="skip">Skip</string>
    <string name="menuhome">Home</string>
    <string name="menudaily">Daily Activity</string>
    <string name="menugallery">Gallery</string>
    <string name="menumusic">Music</string>
    <string name="menuprofile">Profile</string>
    <string name="getstarted">Get Started</string>
    <string name="namasaya">Muhamad El Raiz</string>
    <string name="nimsaya">10117163</string>
    <string name="kelassaya">IF5</string>
    <string name="biodata">Biodata</string>
    <string name="makes">Favourite Food</string>
    <string name="mikes">Favourite Drink</string>
    <string name="makesitem">Pizza</string>
    <string name="mikesitem">Coca-Cola</string>
    <string name="hobbies">Hobbies</string>
    <string name="hob1">Musics</string>
    <string name="hob2">Games</string>
    <string name="hob3">Movies</string>
    <string name="interest">Interest</string>
    <string name="interestitem">Money and Power</string>
    <string name="aspiration">Aspiration</string>
    <string name="asp1">Game Dev</string>
    <string name="asp2">Musician</string>
    <string name="social">Social Media</string>
    <string name="contact">Contacts</string>
    <string name="phone"> Phone</string>
    <string name="mail"> Mail</string>
    <string name="phoneitem">085714838176</string>
    <string name="mailitem">raizrock161@gmail.com</string>
    <string name="find">View My Location</string>
    <string name="friend">Friend List</string>
    <string name="twitter">https://twitter.com/muhamadelraiz</string>
    <string name="ig">https://www.instagram.com/elraiz/</string>
    <string name="fb">https://www.facebook.com/muhammadel.raiz?ref=bookmarks</string>
    <string name="title1">No Heart To Speak Of</string>
    <string name="artist1">Blink-182</string>
    <string name="title2">In Bloom</string>
    <string name="artist2">Neck Deep</string>
    <string name="title3">Never</string>
    <string name="artist3">Trevor Daniel</string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="jam">JAM OUT!</string>
    <string name="appinfo">App Info</string>
    <string name="appver">App Version : V 1.0</string>
    <string name="appdev">App Dev : Muhamad El Raiz</string>
</resources>
