<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightestBlack">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen200"
            android:contentDescription="@string/menuprofile"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_header" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/profile"
            app:civ_border_color="@color/colorLighterBlack"
            app:civ_border_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen48"
            android:layout_marginTop="24dp"
            android:layout_marginRight="@dimen/dimen48"
            android:background="@color/colorLighterBlack"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen12"
            android:paddingBottom="@dimen/dimen12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kel"
                android:text="@string/biodata"
                android:textAlignment="center"
                android:textColor="@color/colorMainWhite"
                android:textSize="@dimen/font16"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen2"
                android:layout_marginTop="@dimen/dimen4"
                android:layout_marginBottom="@dimen/dimen4"
                android:background="@color/colorMainRed" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kel"
                android:text="@string/namasaya"
                android:textAlignment="center"
                android:textColor="@color/colorMainWhite"
                android:textSize="@dimen/font16" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kel"
                android:text="@string/nimsaya"
                android:textAlignment="center"
                android:textColor="@color/colorMainWhite"
                android:textSize="@dimen/font16" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:layout_marginRight="@dimen/dimen48"
            android:layout_marginLeft="@dimen/dimen48"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kel"
                    android:textSize="@dimen/font16"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainWhite"
                    android:textAlignment="center"
                    android:text="@string/makes" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/dimen120"
                    android:layout_height="@dimen/dimen120"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/dimen8"
                    android:layout_marginBottom="@dimen/dimen8"
                    app:srcCompat="@drawable/makes" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kel"
                    android:textColor="@color/colorMainWhite"
                    android:textAlignment="center"
                    android:text="@string/makesitem" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kel"
                    android:textSize="@dimen/font16"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainWhite"
                    android:textAlignment="center"
                    android:text="@string/mikes" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/dimen120"
                    android:layout_height="@dimen/dimen120"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/dimen8"
                    android:layout_marginBottom="@dimen/dimen8"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/mikes" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kel"
                    android:textColor="@color/colorMainWhite"
                    android:textAlignment="center"
                    android:text="@string/mikesitem" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen48"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginRight="@dimen/dimen48"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8"
                android:layout_marginBottom="@dimen/dimen4"
                android:fontFamily="@font/kel"
                android:text="@string/hobbies"
                android:textAlignment="center"
                android:textColor="@color/colorMainWhite"
                android:textSize="@dimen/font16"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen2"
                android:layout_marginBottom="@dimen/dimen8"
                android:background="@color/colorMainRed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kel"
                    android:textColor="@color/colorMainWhite"
                    android:textAlignment="center"
                    android:text="@string/hob1" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kel"
                    android:textColor="@color/colorMainWhite"
                    android:textAlignment="center"
                    android:text="@string/hob2" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/kel"
                    android:textColor="@color/colorMainWhite"
                    android:textAlignment="center"
                    android:text="@string/hob3" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>