<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentBlack"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_img"
            android:layout_width="@dimen/dimen330"
            android:layout_height="@dimen/dimen330"
            android:contentDescription="@string/splashimgdesc"
            app:srcCompat="@drawable/ic_logo"
            android:padding="@dimen/dimen24"/>

        <TextView
            android:id="@+id/splashtext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kel"
            android:textSize="@dimen/font16"
            android:paddingBottom="@dimen/dimen6"
            android:textAlignment="center"
            android:text="@string/hastag1"
            android:textColor="@color/colorMainWhite" />

        <TextView
            android:id="@+id/splashtext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kel"
            android:textSize="@dimen/font16"
            android:text="@string/hastag2"
            android:textAlignment="center"
            android:textColor="@color/colorMainWhite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>