<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLighterBlack"
    tools:context=".MusicActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen16"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:fontFamily="@font/kel"
                android:textSize="@dimen/font20"
                android:textColor="@color/colorMainWhite"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/jam"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen2"
                android:layout_marginBottom="@dimen/dimen10"
                android:background="@color/colorMainRed"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kel"
                    android:text="@string/title1"
                    android:textColor="@color/colorMainWhite"
                    android:textSize="@dimen/font18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen4"
                    android:fontFamily="@font/kel"
                    android:text="@string/artist1"
                    android:textColor="@color/colorMainWhite" />
            </LinearLayout>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen16"
                app:autoPlay="false"
                app:showYouTubeButton="false"
                app:showFullScreenButton="true"
                app:videoId="kDIR9gkAv88"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kel"
                    android:text="@string/title2"
                    android:textColor="@color/colorMainWhite"
                    android:textSize="@dimen/font18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kel"
                    android:text="@string/artist2"
                    android:textColor="@color/colorMainWhite"
                    android:layout_marginBottom="@dimen/dimen4"/>
            </LinearLayout>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen16"
                app:autoPlay="false"
                app:showYouTubeButton="false"
                app:showFullScreenButton="true"
                app:videoId="RPzf_4dcL28"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kel"
                    android:text="@string/title3"
                    android:textColor="@color/colorMainWhite"
                    android:textSize="@dimen/font18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kel"
                    android:text="@string/artist3"
                    android:textColor="@color/colorMainWhite"
                    android:layout_marginBottom="@dimen/dimen4"/>
            </LinearLayout>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen16"
                app:autoPlay="false"
                app:showYouTubeButton="false"
                app:showFullScreenButton="true"
                app:videoId="-cHsuY4DnZ4"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDullRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>