<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfilleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/colorLightestBlack">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen200"
                android:contentDescription="@string/menuprofile"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_header" />

            <TextView
                android:id="@+id/txt_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/kel"
                android:clickable="true"
                android:text="@string/about"

                android:textColor="@color/colorMainWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/profile"
                app:civ_border_color="@color/colorLighterBlack"
                app:civ_border_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/kel"
                android:text="@string/namasaya"
                android:textColor="@color/colorMainWhite"
                android:textSize="@dimen/font16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen48"
                android:layout_marginTop="12dp"
                android:layout_marginRight="@dimen/dimen48"
                android:background="@color/colorLighterBlack"
                android:orientation="vertical"
                android:paddingTop="@dimen/dimen12"
                android:paddingBottom="@dimen/dimen12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kel"
                    android:text="@string/social"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainWhite"
                    android:textSize="@dimen/font16"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen2"
                    android:layout_marginTop="@dimen/dimen4"
                    android:layout_marginBottom="@dimen/dimen4"
                    android:background="@color/colorMainRed" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen48"
                    android:layout_marginRight="@dimen/dimen48"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_ig"
                        android:layout_width="@dimen/dimen48"
                        android:layout_height="@dimen/dimen48"
                        android:onClick="openig"
                        android:contentDescription="@string/ig"
                        android:layout_weight="1"
                        android:background="@color/colorLighterBlack"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/sos1" />

                    <ImageButton
                        android:id="@+id/btn_twt"
                        android:layout_width="@dimen/dimen48"
                        android:layout_height="@dimen/dimen48"
                        android:onClick="opentwt"
                        android:contentDescription="@string/twitter"
                        android:layout_weight="1"
                        android:background="@color/colorLighterBlack"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/sos2" />

                    <ImageButton
                        android:id="@+id/btn_fb"
                        android:layout_width="@dimen/dimen48"
                        android:layout_height="@dimen/dimen48"
                        android:onClick="openfb"
                        android:contentDescription="@string/fb"
                        android:layout_weight="1"
                        android:background="@color/colorLighterBlack"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/sos3" />

                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen48"
                    android:layout_marginTop="@dimen/dimen16"
                    android:layout_marginRight="@dimen/dimen48"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen8"
                        android:fontFamily="@font/kel"
                        android:text="@string/contact"
                        android:textAlignment="center"
                        android:textColor="@color/colorMainWhite"
                        android:textSize="@dimen/font16"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen2"
                        android:layout_marginTop="@dimen/dimen8"
                        android:layout_marginBottom="@dimen/dimen8"
                        android:background="@color/colorMainRed" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="start"
                                android:layout_marginBottom="@dimen/dimen6"
                                android:drawableLeft="@drawable/con_phone"
                                android:fontFamily="@font/kel"
                                android:gravity="center"
                                android:text="@string/phone"
                                android:textColor="@color/colorMainWhite"
                                android:textSize="@dimen/font16" />

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:drawableLeft="@drawable/con_mail"
                                android:fontFamily="@font/kel"
                                android:gravity="center"
                                android:text="@string/mail"
                                android:textColor="@color/colorMainWhite" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/dimen6"
                                android:layout_weight="1"
                                android:fontFamily="@font/kel"
                                android:text="@string/phoneitem"
                                android:textAlignment="center"
                                android:textColor="@color/colorMainWhite" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/kel"
                                android:text="@string/mailitem"
                                android:textAlignment="center"
                                android:textColor="@color/colorMainWhite" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16"
                    android:paddingEnd="@dimen/dimen6"
                    android:layout_gravity="center"
                    android:onClick="openmap"
                    android:background="@color/colorAccentBlack"
                    android:fontFamily="@font/kel"
                    android:textColor="@color/colorMainWhite"
                    android:drawableLeft="@drawable/con_location"
                    android:text="@string/find" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDullRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>